@@ -18,6 +18,7 @@ package org.alfasoftware.morf.metadata;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.alfasoftware.morf.sql.SelectStatement;
 
@@ -93,13 +94,24 @@ public final class SchemaUtils {
 
 
   /**
-   * Build a {@link Schema} from a list of {@link Table}s.
+   * Build a {@link Schema} from a list of {@link View}s.
    *
    * @param views The views to use.
    * @return A {@link Schema} implementation
    */
   public static Schema schema(View... views) {
     return new SchemaBean(views);
+  }
+
+
+  /**
+   * Build a {@link Schema} from a list of {@link Table}s.
+   *
+   * @param sequences The views to use.
+   * @return A {@link Schema} implementation
+   */
+  public static Schema schema(Sequence... sequences) {
+    return new SchemaBean(sequences);
   }
 
 
@@ -121,7 +133,18 @@ public final class SchemaUtils {
    * @return A {@link Schema} implementation
    */
   public static Schema schema(Collection<View> views) {
-    return new SchemaBean(ImmutableList.of(), views);
+    return new SchemaBean(ImmutableList.of(), views, ImmutableList.of());
+  }
+
+
+  /**
+   * Build a {@link Schema} from a list of {@link Sequence}s.
+   *
+   * @param sequences The sequences to use.
+   * @return A {@link Schema} implementation
+   */
+  public static Schema schema(List<Sequence> sequences) {
+    return new SchemaBean(ImmutableList.of(), ImmutableList.of(), sequences);
   }
 
 
@@ -166,7 +189,12 @@ public final class SchemaUtils {
         schema(FluentIterable.from(schema.views())
           .filter(view -> !isMatching(exclusionRegExes, view.getName()))
           .transform(SchemaUtils::copy)
-            .toList()));
+            .toList()),
+        schema(FluentIterable.from(schema.sequences())
+          .filter(sequence -> !isMatching(exclusionRegExes, sequence.getName()))
+          .transform(SchemaUtils::copy)
+          .toList())
+      );
   }
 
   /**
@@ -348,6 +376,27 @@ public final class SchemaUtils {
 
 
   /**
+   * Create a sequence.
+   *
+   * @param sequenceName The name of the sequence.
+   */
+  public static SequenceBuilder sequence(String sequenceName) {
+    return new SequenceBuilderImpl(sequenceName);
+  }
+
+
+  /**
+   * Create a copy of a sequence.
+   *
+   * @param sequence The {@link Sequence} to copy.
+   * @return {@link Sequence} implementation copied from the provided sequence.
+   */
+  public static Sequence copy(Sequence sequence) {
+    return new SequenceBean(sequence);
+  }
+
+
+  /**
    * Create a column type.
    *
    * @param type The {@link DataType} of the field.
@@ -398,6 +447,28 @@ public final class SchemaUtils {
       builder = builder.nullable();
     }
     return builder;
+  }
+
+
+  /**
+   * Builds {@link Sequence} implementation.
+   */
+  public interface SequenceBuilder extends Sequence {
+
+    /**
+     * Sets the starts with value for the sequence.
+     *
+     * @return this sequence builder, for method chaining.
+     */
+    public SequenceBuilder startsWith(Integer startWith);
+
+    /**
+     * Creates a temporary sequence.
+     *
+     * @return this sequence builder, for method chaining.
+     */
+    public SequenceBuilder temporary();
+
   }
 
 
@@ -545,6 +616,32 @@ public final class SchemaUtils {
      */
     public IndexBuilder unique();
   }
+
+
+  /**
+   * Private implementation of {@link SequenceBuilder}.
+   */
+  private static final class SequenceBuilderImpl extends SequenceBean implements SequenceBuilder {
+
+    private SequenceBuilderImpl(String name) {
+      super(name);
+    }
+
+    private SequenceBuilderImpl(String name, Integer startsWith, boolean isTemporary) {
+      super(name, startsWith, isTemporary);
+    }
+
+    @Override
+    public SequenceBuilder startsWith(Integer startsWith) {
+      return new SequenceBuilderImpl(getName(), startsWith, isTemporary());
+    }
+
+    @Override
+    public SequenceBuilder temporary() {
+      return new SequenceBuilderImpl(getName(), getStartsWith(), true);
+    }
+  }
+
 
   /**
    * Private implementation of {@link TableBuilder}.
@@ -726,16 +823,10 @@ public final class SchemaUtils {
    * List the primary key columns for a given table.
    *
    * @param table The table
-   * @return The primary keys
+   * @return The primary key columns
    */
   public static List<Column> primaryKeysForTable(Table table) {
-    List<Column> result = Lists.newArrayList();
-    for (Column column : table.columns()) {
-      if (column.isPrimaryKey()) {
-        result.add(column);
-      }
-    }
-    return result;
+    return table.columns().stream().filter(Column::isPrimaryKey).collect(Collectors.toList());
   }
 
 
@@ -743,16 +834,10 @@ public final class SchemaUtils {
    * List auto-numbered columns for a given table.
    *
    * @param table The table
-   * @return The primary keys
+   * @return The auto-numbered columns
    */
   public static List<Column> autoNumbersForTable(Table table) {
-    List<Column> result = Lists.newArrayList();
-    for (Column column : table.columns()) {
-      if (column.isAutoNumbered()) {
-        result.add(column);
-      }
-    }
-    return result;
+    return table.columns().stream().filter(Column::isAutoNumbered).collect(Collectors.toList());
   }
 
 
@@ -772,6 +857,16 @@ public final class SchemaUtils {
   }
 
 
+  public static List<String> upperCaseNamesOfColumns(List<Column> columns) {
+    return Lists.transform(columns, new Function<Column, String>() {
+      @Override
+      public String apply(Column column) {
+        return column.getUpperCaseName();
+      }
+    });
+  }
+
+
   /**
    * Convert all the strings in a list to upper case.
    *
@@ -779,11 +874,6 @@ public final class SchemaUtils {
    * @return A new list of strings, with each string converted to upper case
    */
   public static List<String> toUpperCase(List<String> listOfStrings) {
-    return FluentIterable.from(listOfStrings).transform(new Function<String, String>() {
-      @Override
-      public String apply(String value) {
-        return value.toUpperCase();
-      }
-    }).toList();
+    return listOfStrings.stream().map(String::toUpperCase).collect(Collectors.toList());
   }
 }
